# week6-advanced-rag

./: .gitignore  CLAUDE.md  README.md  main.ipynb  pyproject.toml  task3_synthetic_data.ipynb
data/: knowledge_base.md  phishing_email_dataset.csv  phishing_email_dataset.json  phishing_knowledge_base.md  prompt_injection_dataset.csv  synthetic_phishing_dataset.csv  synthetic_phishing_dataset.json
docs/: Advanced_RAG_Summary.md  Assignment_6_en.md  Assignment_6_zh.md  RAG_SDD.md  assignment.md
