[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "faiss-cpu",
    "datasets",
    "litellm",
    "pacmap",
    "plotly",
    "pandas",
    "ipykernel",
]
